@@ -5,6 +5,7 @@ MANIFEST			This list of files
 README.md
 t/00.load.t
 t/01.spell.t
+t/02.just_check.t
 text/en/words.dic
 text/en/text.md
 text/en/README.md
